force-app/main/default/objects/Medical_Facility__c/Medical_Facility__c.object-meta.xml
<CustomObject>
    <description>Healthcare facility, such as a hospital or clinic.</description>
    <label>Medical Facility</label>
    <nameField>
        <label>Medical Facility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Facilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>