force-app/main/default/objects/Medical_Facility__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>The physical location of this Medical Facility.</description>
    <label>Address</label>
    <type>Address</type>
</CustomField>