force-app/main/default/objects/Medical_Facility__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The city where the medical facility is located.</description>
    <label>City</label>
    <length>64</length>
    <type>Text</type>
</CustomField>