force-app/main/default/objects/Medical_Facility__c/fields/Insurance_Required__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Information on whether the facility requires insurance from the patient</description>
    <label>Insurance Required</label>
    <type>Checkbox</type>
</CustomField>