force-app/main/default/objects/Medical_Facility__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of medical facility.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>